# current_state

./: .dockerignore  .env.err.bak  .env.template  .gitignore  Dockerfile  PI-POSTBOOT-SETUP.md  README.md  config.json  create_silent_wav.py  emotion_analyzer.py  full-cycle-btn.service  gpio_test.py  instructions.txt  main.py  main_just_player.py  music-player.service  music_generator.py  music_post_processor.py  news_data_2025-09-07.json  news_data_2025-09-15.json  news_data_2025-09-29.json  news_data_2026-01-07.json  news_data_2026-01-08.json  news_data_2026-01-09.json  news_data_2026-01-10.json  player.py  pyproject.toml  remove.sh  run_full_cycle_btn.py  run_player.py  settings.json  settings.json.template  setup.sh  test.py  test_post_processor.py  test_sd.py
docs/: MUSIC_PROMPT_GENERATION_PIPELINE.md
generation_results/: .gitkeep  pipeline_results.json  prompt.txt
lib/: archetype_selector.py  archetypes.py  generation_backup.py  hardware_player.py  llm_analyzer.py  music_generator.py  music_post_processor.py  music_prompt_builder.py  news_fetcher.py  player.py  radar_controller.py  settings.py  theme_textures.py  visualizations.py
llm_agents/: musicgen_prompt_crafter.py  news_analyzer.py
prompts/: news_analyzer_system.md
services/: 00_status.sh  01_install_and _start_services.sh  01_install_and_start_services.sh  04_stop_and_uninstall_services.sh  full-cycle-btn.service  music-player.service  process-monitor-web  process-monitor-web.service
tests/: 01_test_IOs.py  02_test_event_radar.py  02_test_serial_radar.py  03_test_serial_radar_as_event.py  04_test_radar_diagnostics.py  test_analyzer.py  (+7 more)
(+71 files in other folders)
