[project]
name = "daily-mood-theme-song-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pynput>=1.8.1",
    "python-dotenv>=1.1.1",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
