[project]
name = "daily-mood-theme-song-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pyserial>=3.5",
    "python-dotenv>=1.1.1",
    "rdlib>=0.9",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "rpi-gpio>=0.7.1",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
