[project]
name = "current-state"
version = "0.1.0"
description = "An AI based NEWS → SENTIMENT → AI GENERATED MUSIC running on mmWave radar based PI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pyserial>=3.5",
    "python-dotenv>=1.1.1",
    "rdlib>=0.9",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "rpi-gpio>=0.7.1; sys_platform == 'linux'",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]
